<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavros_control</name>
  <version>0.0.1</version>
  <description>A ROS2 package for controlling ArduPilot-based robots</description>
  <maintainer email="itskalvik@gmail.com">Kalvik</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>

  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>mavros_extras</depend>

  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geographic_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
